[gd_scene load_steps=7 format=2]

[ext_resource path="res://Items/Item Drop/item_drop_animation_template.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Items/Item Drop/item_drop_state_machine.gd" type="Script" id=2]
[ext_resource path="res://Items/Item Drop/States/drop.gd" type="Script" id=3]
[ext_resource path="res://Items/Item Drop/States/picked.gd" type="Script" id=4]
[ext_resource path="res://Items/Item Drop/States/despawn.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.7226, 22.2151 )

[node name="ItemDrop" type="Area2D"]

[node name="PickAreaShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "drop"

[node name="States" type="Node" parent="."]
script = ExtResource( 2 )
START_STATE = NodePath("Drop")

[node name="Drop" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="DespawnTimer" type="Timer" parent="States/Drop"]
one_shot = true

[node name="Picked" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Despawn" type="Node" parent="States"]
script = ExtResource( 5 )
[connection signal="body_entered" from="." to="States/Drop" method="_on_ItemDrop_body_entered"]
[connection signal="body_exited" from="." to="States/Drop" method="_on_ItemDrop_body_exited"]
[connection signal="animation_finished" from="Animation" to="States" method="_on_animation_finished"]
[connection signal="timeout" from="States/Drop/DespawnTimer" to="States/Drop" method="_on_DespawnTimer_timeout"]
